syntax = "proto3";

package user;

service UserService {
  rpc FindAll (FindAllRequest) returns (FindAllResponse) {}
}

message FindAllRequest {
}

message FindAllResponse {
  repeated User user = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}